# prompt-rewrite

./: .editorconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_v0.2.0.md  RELEASE_v0.2.1.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  app.py  index.html  launch_ui.py  launcher.bat  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  start_mac.command
.claude/: settings.json
.claude/rules/: llm.md  strategies.md  testing.md
.github/workflows/: python-tests.yml  release.yml
benchmark/: prompts.json  report.json  run.py
examples/: advanced_pipeline.py  basic_usage.py
scripts/: launcher.bat  start.bat  start.sh  start_mac.command
src/prompt_rewrite/: __init__.py  cli.py  decorators.py  plugins.py
src/prompt_rewrite/api/: template_editor.py
src/prompt_rewrite/core/: __init__.py  analyzer.py  history.py  pipeline.py  quality.py  types.py  workflow_defs.py
src/prompt_rewrite/llm/: __init__.py  base_client.py  claude_client.py  deepseek_client.py  llm_analyzer.py  llm_strategies.py  ollama_client.py  openai_client.py
src/prompt_rewrite/strategies/: __init__.py  base.py  chain_of_thought.py  constraint_injector.py  context_optimizer.py  example_formatter.py  output_formatter.py  refusal_guard.py  role_enhancer.py  structure_formatter.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_decorators.py  test_deepseek_client.py  test_edge_cases.py  test_history.py  test_llm_analyzer.py  test_pipeline.py  test_plugins.py  test_providers.py  test_quality.py  test_strategies.py  test_template_editor.py  test_template_loader.py
(+5 files in other folders)
