[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-rewrite"
version = "0.8.0"
description = "Smart prompt optimization engine with AI enhancement"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

authors = [
    { name = "银桑" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "requests>=2.25",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "gradio>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yinsang0910-star/prompt-rewrite"
Repository = "https://github.com/yinsang0910-star/prompt-rewrite"

[project.scripts]
prompt-rewrite = "prompt_rewrite.cli:main"

[project.entry-points."prompt_rewrite.strategies"]
# Users can register custom strategies here
# my_strategy = "my_package.strategies:MyStrategy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prompt_rewrite = ["templates/*.yaml"]
